# FastAPI-project

./: .env  README.md  docker-compose.yml  pyproject.toml  requirements.txt
source_folder/: .env  courses.json  models.py
source_folder/alembic/: env.py
source_folder/alembic/versions/: 74ec99acbd69_new_migration.py
source_folder/conn/: db_connector.py
